<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    >


    <View
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/backgroung_header_card_top"
        />




    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:background="@drawable/search_bar_border"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@id/top_header"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/tab_filter_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_header"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/darkGrey"
        app:cardCornerRadius="10dp"
        >

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@drawable/tabs_selector"
            android:background="@color/darkGrey"
            app:tabSelectedTextColor="@color/darkGrey"
            app:tabTextColor="@color/grey"
            app:tabTextAppearance="@style/CustomTabText"
            app:tabIndicatorHeight="0dp"
            >


            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
            />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/populares"
            />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lan_amentos"
            />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/especiais"
            />


        </com.google.android.material.tabs.TabLayout>

    </androidx.cardview.widget.CardView>





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_filter_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/tab_filter_bar"
                android:layout_margin="10dp"

                />


            <androidx.cardview.widget.CardView
                android:id="@+id/img_persoangem_1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/img_user"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capitao_america"
                    android:textColor="@color/amber"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:shadowRadius="30"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowColor="@color/black"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="15dp"

                />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avengers"
                    android:textColor="@color/amber"
                    android:layout_marginStart="10dp"
                />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/amber"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp"
                />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/img_persoangem_1"
                android:layout_margin="10dp"

                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iron_man"
                    android:textColor="@color/amber"
                    android:layout_marginStart="10dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/amber"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
            />



            <androidx.cardview.widget.CardView
                android:id="@+id/img_persoangem_2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintTop_toBottomOf="@id/home_recycler_1"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/img_user"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/user" />

            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huck"
                    android:textColor="@color/amber"
                    android:layout_marginStart="10dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/amber"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
            />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thor"
                    android:textColor="@color/amber"
                    android:layout_marginStart="10dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/amber"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_5"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capitao_america"
                    android:textColor="@color/amber"
                    android:layout_marginStart="10dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/amber"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                />


        </LinearLayout>
    </ScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>